fix wrapping bug on technologies list

--- a/src/components/project/project.scss
+++ b/src/components/project/project.scss
@@ -39,10 +39,13 @@
         margin-top: auto;
         text-align: right;
         text-transform: uppercase;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-end;    
 
         li {
             display: inline;
-            margin: $spacer;
+            margin-left: $spacer;
         }
 
         @media only screen and (max-width: $md-max) {
